sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var e = true
  var f = getNombreValeurs-2
  var d = 0
  while (e)
      {e=false
      for (i<- d to f)
          {if (plusPetit(i+1,i))
              {e=true ;echange(i, i+1) ;};
          }
       if (!e) {return()}
       f-=1
       e=false
       for (i<- f to d by -1 )
          {if (plusPetit(i+1,i))
              {e=true ;echange(i, i+1) ;}}
       if (!e) {return()}
       d+=1
      }
  
       ;}
}